# openmprdb-client-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config
src/: api.rs  api_v1.rs  app.rs  config.rs  http.rs  main.rs  pgp.rs
src/command/: banlist.rs  error.rs  http.rs  mod.rs
src/config/: client.rs  mod.rs  records.rs  servers.rs
