[package]
name = "openmprdbc-cli"
version = "0.3.0-beta"
authors = ["RDCarrot <yyt226univ2017@yahoo.com>"]
edition = "2018"
description = "A simple cli-client example for [openMPRDB](https://github.com/NyaaCat/OpenMPRDB)" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
ureq = { version = "^2.1" }
sequoia-openpgp = { version = "^1.3", default-features = false }
rpassword = "^5.0"
anyhow = "^1.0"
chrono = "^0.4"
uuid = { version = "^0.8", features = ["serde"] }
url = "^2.2"

[features]
cng = ["sequoia-openpgp/crypto-cng"]
nettle = ["sequoia-openpgp/crypto-nettle"]
default = ["cng"]